[package]
name = "taxy"
version = "0.1.3"
edition = "2021"
include = ["/src", "/build.rs", "/LICENSE", "/webui/dist"]
build = "build.rs"
description = "A TCP reverse proxy with a user-friendly WebUI"
authors = ["picoHz <picoHz@outlook.com>"]
keywords = ["tcp", "proxy", "reverse-proxy"]
categories = ["network-programming"]
license = "MIT"
repository = "https://github.com/picoHz/taxy"
homepage = "https://github.com/picoHz/taxy"

[dependencies]
anyhow = "1.0.70"
argon2 = "0.5.0"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "4.2.2", features = ["derive", "env"] }
cuid2 = "0.1.0"
directories = "5.0.0"
futures = "0.3.28"
globwalk = "0.8.1"
hex = "0.4.3"
http-body-util = "0.1.0-rc.2"
humantime-serde = "1.1.1"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
include_dir = "0.7.3"
indexmap = { version = "1.9.3", features = ["serde"] }
instant-acme = "0.2.1"
mime_guess = "2.0.4"
multiaddr = "0.17.1"
once_cell = "1.17.1"
percent-encoding = "2.2.0"
pin-project-lite = "0.2.9"
rcgen = "0.10.0"
rpassword = "7.2.0"
rustls-native-certs = "0.6.2"
rustls-pemfile = "1.0.2"
serde = {version = "1.0.160", features = ["rc"]}
serde_default = "0.1.0"
serde_derive = "1.0.160"
serde_json = "1.0.96"
serde_qs = "0.12.0"
sha2 = "0.10.6"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0.40"
time = { version = "0.3.20", features = ["serde"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "net", "signal", "io-util"] }
tokio-rustls = "0.24.0"
tokio-stream = { version = "0.1.12", features = ["sync"] }
toml = "0.7.3"
toml_edit = { version = "0.19.8", features = ["serde"] }
tracing = { version = "0.1.37", features = ["release_max_level_info"] }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
utoipa = "3.3.0"
utoipa-swagger-ui = "3.1.3"
warp = "0.3.4"
x509-parser = "0.15.0"

[build-dependencies]
built = "0.6.0"

[profile.release]
strip = true
