[workspace]
members = ["taxy", "taxy-api", "taxy-webui"]
resolver = "2"

[patch.crates-io]
taxy-api = { path = "./taxy-api" }

[profile.release]
strip = true
lto = true

[profile.dev.package.argon2]
opt-level = 3

[profile.web-release]
inherits = "release"
opt-level = 'z'
panic = 'abort'
strip = true
lto = true
codegen-units = 1
