[package]
name = "taxy-api"
version = "0.1.0"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
keywords = ["tcp", "http", "tls", "proxy", "reverse-proxy"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]
license = "MIT"
repository = "https://github.com/picoHz/taxy"
homepage = "https://github.com/picoHz/taxy"

[dependencies]
base64 = "0.21.2"
humantime-serde = "1.1.1"
multiaddr = "0.17.1"
serde = {version = "1.0.163", features = ["rc"]}
serde_default = "0.1.0"
serde_derive = "1.0.163"
serde_json = "1.0.96"
thiserror = "1.0.40"
time = "0.3.21"
url = { version = "2.3.1", features = ["serde"] }
utoipa = "3.3.0"
warp = { version = "0.3.5", optional = true }
