[package]
name = "taxy-api"
description = "Type definitions and API for taxy"
version = "0.1.9"
edition = "2021"
authors = ["picoHz <picoHz@outlook.com>"]
keywords = ["tcp", "http", "tls", "proxy", "reverse-proxy"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]
license = "MIT"
repository = "https://github.com/picoHz/taxy"
homepage = "https://taxy.dev/"

[dependencies]
base64 = "0.21.2"
humantime-serde = "1.1.1"
multiaddr = "0.18.0"
serde = {version = "1.0.171", features = ["rc"]}
serde_default = "0.1.0"
serde_derive = "1.0.171"
serde_json = "1.0.102"
thiserror = "1.0.43"
time = "0.3.23"
url = { version = "2.4.0", features = ["serde"] }
utoipa = "3.3.0"
warp = { version = "0.3.5", optional = true }
