[package]
name = "taxy-webui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
ybc = "0.4.0"
console_error_panic_hook = "0.1.7"
yew-router = "0.17.0"
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.36"
taxy-api = "0.1.0"
serde_json = "1.0.96"
gloo-utils = "0.1.6"
serde_derive = "1.0.163"
serde = "1.0.163"
serde-wasm-bindgen = "0.5.0"
yewdux = "0.9.3"
web-sys = { version = "0.3.63", features = ["HtmlOptionElement"] }
futures = "0.3.28"
gloo-dialogs = "0.1.1"
gloo-timers = "0.2.6"
multiaddr = "0.17.0"
anyhow = "1.0.71"
url = "2.4.0"
base64 = "0.21.2"
