[package]
name = "taxy-webui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
ybc = "0.4.0"
console_error_panic_hook = "0.1.7"
yew-router = "0.17.0"
gloo-net = "0.3.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.37"
taxy-api = "0.1.12"
serde_json = "1.0.102"
gloo-utils = "0.1.7"
serde_derive = "1.0.171"
serde = "1.0.171"
yewdux = "0.9.3"
web-sys = "0.3.64"
futures = "0.3.28"
gloo-dialogs = "0.1.1"
gloo-timers = "0.2.6"
multiaddr = "0.18.0"
url = "2.4.0"
base64 = "0.21.2"
time = { version = "0.3.23", features = ["formatting"] }
gloo-events = "0.1.2"
