[package]
name = "taxy-webui"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2.93"
console_error_panic_hook = "0.1.7"
yew-router = "0.18.0"
gloo-net = "0.6.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.37"
taxy-api = "0.2.1"
serde_json = "1.0.102"
gloo-utils = "0.2.0"
serde_derive = "1.0.171"
serde = "1.0.171"
yewdux = "0.10.0"
web-sys = { version = "0.3.64", features = ["HtmlSelectElement"] }
futures = "0.3.28"
gloo-dialogs = "0.2.0"
gloo-timers = "0.3.0"
url = "2.4.0"
base64 = "0.22.1"
time = { version = "0.3.36", features = ["formatting"] }
gloo-events = "0.2.0"
web-time = "1.0.0"
fancy-duration = "0.9.1"
